--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,11 @@
 		<version>5.6.1</version>
 	</dependency>
 
-
+	<dependency>
+		<groupId>org.hibernate.validator</groupId>
+		<artifactId>hibernate-validator</artifactId>
+		<version>6.0.13.Final</version>
+	</dependency>
 </dependencies>
 
 
